// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rename should change the name of a field 1`] = `
"type Query {
  user: MyUser!
  my_book: MyBook!
}

type MyUser {
  id: ID!
}

type MyBook {
  id: ID!
}
"
`;

exports[`rename should change the name of a type 1`] = `
"type Query {
  my_user: User!
  my_book: MyBook!
}

type User {
  id: ID!
}

type MyBook {
  id: ID!
}
"
`;

exports[`rename should change the name of multiple fields 1`] = `
"type Query {
  user: MyUser!
  book: MyBook!
}

type MyUser {
  false: ID!
}

type MyBook {
  false: ID!
}
"
`;

exports[`rename should change the name of multiple type names 1`] = `
"type Query {
  my_user: User!
  my_book: Book!
}

type User {
  id: ID!
}

type Book {
  id: ID!
}
"
`;

exports[`rename should replace all occurrences of a substring in a field 1`] = `
"type Query {
  user_v1: ApiUserV1Api!
}

type ApiUserV1Api {
  false: ID!
}
"
`;

exports[`rename should replace all occurrences of a substring in a type 1`] = `
"type Query {
  api_user_v1_api: UserV1!
}

type UserV1 {
  id: ID!
}
"
`;

exports[`rename should replace all occurrences of multiple substrings in a field 1`] = `
"type Query {
  user: ApiUserV1Api!
}

type ApiUserV1Api {
  false: ID!
}
"
`;

exports[`rename should replace all occurrences of multiple substrings in a type 1`] = `
"type Query {
  api_user_v1_api: User!
}

type User {
  id: ID!
}
"
`;
